feat:can do transaction now but not auto updating
